# image-colorizer

./: CHANGELOG.md  Cargo.toml  LICENSE.md  PKGBUILD.template  README.md
.github/workflows/: publish.yaml  release-plz.yaml  release.yaml
colorschemes/: catppuccin-frappe.txt  catppuccin-latte.txt  catppuccin-macchiato.txt  catppuccin-mocha.txt  grayscale.txt  kanagawa.txt  nord.txt  tomorrow-night.txt
src/: colorize.rs  colors.rs  config.rs  main.rs  types.rs  utils.rs
src/shaders/: colorize_pass1.wgsl  colorize_pass3.wgsl  scan.wgsl  transpose.wgsl
