[package]
name = "colorizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
palette = "0.7.2"
indicatif = "0.17.3"
serde = "1.0"
serde_derive = "1.0"
config = "0.13"
toml = "0.7"
dirs = "5.0"
clap = "3.2"
rand = "0.8.5"
wgpu = "0.16"
futures = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
rayon = "1.7.0"
