[package]
name = "image-colorizer"
version = "1.1.4"
authors = ["Taylor Beeston <beeston.taylor@gmail.com>"]
edition = "2021"
description = "Never settle for images outside your colorscheme again!"
repository = "https://github.com/TaylorBeeston/image-colorizer"
license = "MIT"
readme = "README.md"
keywords = ["image", "color", "gpu", "webgpu", "wgsl"]
categories = ["multimedia::images", "graphics", "command-line-utilities"]

[dependencies]
image = "0.24.6"
palette = "0.7.2"
indicatif = "0.17.3"
serde = "1.0"
serde_derive = "1.0"
config = "0.13"
toml = "0.7"
dirs = "5.0"
clap = "3.2"
rand = "0.8.5"
wgpu = "0.16"
futures = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0"
